<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:gravity="center_horizontal"
        android:transitionGroup="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_reviews"
            android:id="@+id/textView"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            android:textColor="#000000"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/et_review"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:inputType="textMultiLine"
            android:lines="5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekBar"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:max="5"
            android:progress="1"
            android:indeterminate="false"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/your_rate"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tv_rate"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center_horizontal"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#000000"
                android:text="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:id="@+id/btn_post"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>